--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
     <meta charset="utf-8">
     <title>My test page</title>
   </head>
-  <body>
-    <p>This is my page</p>
+    <h1>「Webコンテンツ作成」の成果</h1>
+    <h2>本テーマの学習目的</h2>
+    <h2>プロジェクト課題について</h2>
+    <h2>数当てゲーム</h2>
+    <h2>毎回の実験で作成したページ</h2>
+      <h3>第1回 WWWとHTML</h3>
+        <p>今回は〜</p>
+        <p>演習の成果</p>
+          <ul>
+            <li><a href="/Users/ishimaruEichi/Documents/medialabo/practice-html/structure.html" target="_blank">演習1-3 HTML文章の作成</a></li>
+            <li><a href="/Users/ishimaruEichi/Documents/medialabo/practice-html/elements.html" target="_blank">演習1-4 HTMLのさまざまな要素</a></li>
+          </ul>
+    <h3>第2回 CSSによるWebページの装飾</h3>
+    <h3>第3回 JavaScriptの基本</h3>
+    <h3>第4回 DOMとJavaScript</h3>
+    <h3>第5回 イベント処理</h3>
   </body>
 </html>
