今回学んだことの書き込み

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <h2>数当てゲーム</h2>
     <h2>毎回の実験で作成したページ</h2>
       <h3>第1回 WWWとHTML</h3>
-        <p>今回は〜</p>
+        <p>今回はhtmlの要素の基本について学びました。見出しの作り方、リストの作り方、画像の貼り方、などの基本的なことを
+          勉強しました。a要素を使うことで、リンクを作ることができ、リンクとリンクを繋げることができました。また、次の課題に取り組みました。
+        </p>
         <p>演習の成果</p>
           <ul>
             <li><a href="/Users/ishimaruEichi/Documents/medialabo/practice-html/structure.html" target="_blank">演習1-3 HTML文章の作成</a></li>
