--- a/practice-html/elements.html
+++ b/practice-html/elements.html
@@ -23,7 +23,7 @@
 		</ol>
 	<h2>小見出し: ハイパーリンク</h2>
 			<ul>
-				<li><a href="file:///Users/ishimaruEichi/Documents/medialabo/practice-html/structure.html">演習1-3のHTMLファイル</a></li>
+				<li><a href="structure.html">演習1-3のHTMLファイル</a></li>
 				<li><a href="file:///Users/ishimaruEichi/Documents/medialabo/index.html">index.html</a></li>
 			</ul>
 	<h2>小見出し: 宇宙望遠鏡(Wikipedia 「宇宙望遠鏡」より）</h2>
