--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h2>プロジェクト課題について</h2>
     <h2>数当てゲーム</h2>
     <h2>毎回の実験で作成したページ</h2>
+    <div>
       <h3>第1回 WWWとHTML</h3>
         <p>今回はhtmlの要素の基本について学びました。見出しの作り方、リストの作り方、画像の貼り方、などの基本的なことを
           勉強しました。a要素を使うことで、リンクを作ることができ、リンクとリンクを繋げることができました。また、次の課題に取り組みました。
@@ -19,9 +20,18 @@
             <li><a href="/Users/ishimaruEichi/Documents/medialabo/practice-html/structure.html" target="_blank">演習1-3 HTML文章の作成</a></li>
             <li><a href="/Users/ishimaruEichi/Documents/medialabo/practice-html/elements.html" target="_blank">演習1-4 HTMLのさまざまな要素</a></li>
           </ul>
-    <h3>第2回 CSSによるWebページの装飾</h3>
-    <h3>第3回 JavaScriptの基本</h3>
-    <h3>第4回 DOMとJavaScript</h3>
-    <h3>第5回 イベント処理</h3>
+    </div>
+    <div>
+      <h3>第2回 CSSによるWebページの装飾</h3>
+    </div>
+    <div>
+      <h3>第3回 JavaScriptの基本</h3>
+    </div>
+    <div>
+      <h3>第4回 DOMとJavaScript</h3>
+    </div>
+    <div>
+      <h3>第5回 イベント処理</h3>
+    </div>
   </body>
 </html>
