--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     <h2>毎回の実験で作成したページ</h2>
     <div>
       <h3>第1回 WWWとHTML</h3>
-        <p>今回はhtmlの要素の基本について学びました。見出しの作り方、リストの作り方、画像の貼り方、などの基本的なことを
-          勉強しました。a要素を使うことで、リンクを作ることができ、リンクとリンクを繋げることができました。また、次の課題に取り組みました。
+        <p>今回はhtmlのの基本について学んだ。見出しの作り方、リストの作り方、画像の貼り方、などの基本的なことを
+          勉強した。HTMLは要素で作られており、ブロック要素とインライン要素がある。また、属性を追加することによって、
+          CSSと組み合わせて見た目を柔軟に変更することができる。a要素を使うことで、リンクを作ることができ、リンクとリンクを繋げることができた。
+          HTMLはhead,bodyと別れており、特にheadには、実際にはページ上に反映されないが、Webページにおける約束事
+          を記述する。基本的に内容はbodyに記述する。また、次の課題に取り組んだ。
         </p>
         <p>演習の成果</p>
           <ul>
