--- a/index.html
+++ b/index.html
@@ -20,12 +20,23 @@
         </p>
         <p>演習の成果</p>
           <ul>
-            <li><a href="/Users/ishimaruEichi/Documents/medialabo/practice-html/structure.html" target="_blank">演習1-3 HTML文章の作成</a></li>
-            <li><a href="/Users/ishimaruEichi/Documents/medialabo/practice-html/elements.html" target="_blank">演習1-4 HTMLのさまざまな要素</a></li>
+            <li><a href="practice-html/structure.html" target="_blank">演習1-3 HTML文章の作成</a></li>
+            <li><a href="practice-html/elements.html" target="_blank">演習1-4 HTMLのさまざまな要素</a></li>
           </ul>
     </div>
     <div>
       <h3>第2回 CSSによるWebページの装飾</h3>
+        <p>
+            今回はCSSの基本について学んだ。CSSを組み合わせる方法は3通りあり、HTMLのhead要素で外部スタイルシートの
+            ファイルを指定する方法、外部スタイルシートを別ファイルで作成する方法、内部スタイルシートとして使用する方法
+            があった。特にインラインスタイルはなるべく避けるべきだということがわかった。cssはセレクタ、プロパティ名、
+            プロパティ値という書式でできている。これらをいじることで、自由に設定を変えることができる。
+        </p>
+        <p>演習の成果</p>
+            <ul>
+                <li><a href="practice-css/browser-intro.css">webブラウザ装飾ページの修正css</a></li>
+                <li><a href="practice-css/browser-intro.html">webブラウザ装飾ページの修正html</a></li>
+            </ul>
     </div>
     <div>
       <h3>第3回 JavaScriptの基本</h3>
