--- a/project.html
+++ b/project.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="project.css">
+    <script src="weather.js" defer></script>
   </head>
   <body>
     <h1>
