--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <h2>本テーマの学習目的</h2>
     <h2>プロジェクト課題について</h2>
     <h2>数当てゲーム</h2>
+    <p>最初に「◯回目の予想: 」を出力。回答回数が4回以上の場合、「答えは◯でした。すでにゲームは終わっています」
+      と表示。正解だった場合、「正解です。おめでとう！」と表示する。間違いだった場合、それが3回目の回答であれば、
+      「まちがい、残念でした答えは◯です。」と表示。答えが間違いより大きい場合は「まちがい、答えはもっと大きいですよ」
+      と表示され、小さい場合は「まちがい、答えはもっと小さいですよ」と表示される。
+    </p>
+    <a href="kazuate.html">数当てゲームのリンク</a>
     <h2>毎回の実験で作成したページ</h2>
     <div>
       <h3>第1回 WWWとHTML</h3>
@@ -40,6 +46,23 @@
     </div>
     <div>
       <h3>第3回 JavaScriptの基本</h3>
+      <p>
+        今回はJavaScriptの基本について学んだ。外部のJavaScriptとして書くやり方がオススメなので、それでやった。
+        実際にエラーを発生させて、それをデバッカーから確認し、間違っている部分が表示されていることを確認した。
+        コンソールは便利だが、コンソールで実行した文や式はどこにも記録されないので、注意が必要。
+        まだ初期化されていない変数の内容や，存在しない何かを取得した結果は undefined や null で、
+        これらは通常の値のように使用することができる。Java と違って main メソッドがないが、
+        プログラムの実行はJavaScript プログラムの1行目から始まる。Java ではエラーになるが,JavaScript ではエラーにならず，
+        正常に実行できてしまうプログラムが書ける。間違った式の計算結果はNaNになる。
+        関数宣言の外で宣言するを グローバル変数 と言う．グローバル変数はページを開いている間,ずっと使用できる変数で
+        例えば、クリックを何回したかカウントするために使うこともできる。デバックにおいて、ブレークポイントで停止させることができる。
+        例外で停止にチェックをして、エラーを確認し、直し終わったらチェックを外すといい。行をクリックすることで、ブレークポイントを
+        設定することもできるので便利。
+      </p>
+      <p>演習の成果</p>
+        <ul>
+          <li><a href="practice-js/obj-practice.html">演習3-6</a></li>
+        </ul>
     </div>
     <div>
       <h3>第4回 DOMとJavaScript</h3>
