index.htmlに文章を追加

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
           勉強した。HTMLは要素で作られており、ブロック要素とインライン要素がある。また、属性を追加することによって、
           CSSと組み合わせて見た目を柔軟に変更することができる。a要素を使うことで、リンクを作ることができ、リンクとリンクを繋げることができた。
           HTMLはhead,bodyと別れており、特にheadには、実際にはページ上に反映されないが、Webページにおける約束事
-          を記述する。基本的に内容はbodyに記述する。また、次の課題に取り組んだ。
+          を記述する。基本的に内容はbodyに記述する。画像を埋め込むこともでき、その際はimg要素を使う。リストは非常によく使うし、
+          同じ種類の何かの一覧を記述するのに便利だ。リストにも、番号なしのリストや番号付きのリストがある。
+          文字を強調するにはemやstrongを使うといい。世の中のウェブサイトには間違った書き方も大量にあるため、MDNなどといった
+          適切な参考資料を参照することが推奨される。また、次の課題に取り組んだ。
         </p>
         <p>演習の成果</p>
           <ul>
@@ -36,7 +39,11 @@
             今回はCSSの基本について学んだ。CSSを組み合わせる方法は3通りあり、HTMLのhead要素で外部スタイルシートの
             ファイルを指定する方法、外部スタイルシートを別ファイルで作成する方法、内部スタイルシートとして使用する方法
             があった。特にインラインスタイルはなるべく避けるべきだということがわかった。cssはセレクタ、プロパティ名、
-            プロパティ値という書式でできている。これらをいじることで、自由に設定を変えることができる。
+            プロパティ値という書式でできている。これらをいじることで、自由に設定を変えることができる。セレクタはCSSで
+            装飾する対象要素を指定する記述だ。たくさんの書き方があるので、全てを覚えることは困難だが、よく使う代表的な
+            ものは覚えたい。プロ馬ティ名は様々あり、CSSにおいてあらかじめ定められた名前だけが使用できる。また、プロパティ値
+            については、プロパティ名に対して許された値だけを指定できる。プロパティ値に関数を指定することもでき、
+            これを使えば、余白などを自由に設定できる。また、次の課題に取り組んだ。
         </p>
         <p>演習の成果</p>
             <ul>
@@ -57,7 +64,7 @@
         関数宣言の外で宣言するを グローバル変数 と言う．グローバル変数はページを開いている間,ずっと使用できる変数で
         例えば、クリックを何回したかカウントするために使うこともできる。デバックにおいて、ブレークポイントで停止させることができる。
         例外で停止にチェックをして、エラーを確認し、直し終わったらチェックを外すといい。行をクリックすることで、ブレークポイントを
-        設定することもできるので便利。
+        設定することもできるので便利。また、次の課題に取り組んだ。
       </p>
       <p>演習の成果</p>
         <ul>
