プロジェクト課題修正

--- a/project.html
+++ b/project.html
@@ -8,6 +8,7 @@
   <body>
     <h1>
         世界の天気を調べよう！
+        <input id="mytext" type="text">
     </h1>
     <ul>
         <li>
@@ -19,7 +20,7 @@
         <li>
             ヨハネスブルク
         </li>
-        <li>
+        <li id = "cn">
             北京
         </li>
         <li>
