index.htmlなどの書き足し

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <p>最初に「◯回目の予想: 」を出力。回答回数が4回以上の場合、「答えは◯でした。すでにゲームは終わっています」
       と表示。正解だった場合、「正解です。おめでとう！」と表示する。間違いだった場合、それが3回目の回答であれば、
       「まちがい、残念でした答えは◯です。」と表示。答えが間違いより大きい場合は「まちがい、答えはもっと大きいですよ」
-      と表示され、小さい場合は「まちがい、答えはもっと小さいですよ」と表示される。
+      と表示され、小さい場合は「まちがい、答えはもっと小さいですよ」と表示される。課題4-1より、数当てゲームの結果を
+      コンソールではなく、ページに表示するようにkazuate.jsのhantei()メソッドの定義を修正した。予想のメッセージは
+      span#kaisu要素とspan#answer要素を指定してから、textContentメソッドを使って、console.log()ではなく、
+      HTMLに出力されるように書き換えた。実行した結果、上書きされてしまったため、4回目の結果が表示されたが、hantei()
+      の数を4つから、1つに減らしたところ、一番最初のメッセージが無事表示されたことを確認した。
     </p>
     <a href="kazuate.html">数当てゲームのリンク</a>
     <h2>毎回の実験で作成したページ</h2>
@@ -73,6 +77,21 @@
     </div>
     <div>
       <h3>第4回 DOMとJavaScript</h3>
+      <p>
+        今回はjavascriptについて前回よりも発展した内容を学習した。一つ目はquerySelectorによる参照だ。まず、
+        検索して、次に、それを起点に操作を行っていく流れが基本だった。querySelectorAllを使えば全ての要素を検索
+        することができる。textContentメソッドを使えば、要素のテキストを参照することができるだけでなく、書き加える
+        ことで更新することができ、htmlに反映させるときによく使った。また、要素の検索の時に、idをとても参考にしたので
+        idをつけることの大切さがわかった。また、javascriptからでもcssの設定を行うことができ、これはイベント処理などで役立つ。
+        要素を追加する際は、document.createElement()を使って新しいオブジェクトを作り、insertAdjacentElemet()
+        を使って場所を指定し、setAttribute()で属性を設定するという一連の流れで行った。remove()では要素を削除することが
+        できるので、これを使って、for of 構文と組み合わせて、リストを簡単に削除することができた。また、以下の課題に
+        取り組んだ。
+      </p>
+      <p>演習の成果</p>
+        <ul>
+          <li><a href="practice-dom/dom-exercise.html">演習4-2から4-5</a></li>
+        </ul>
     </div>
     <div>
       <h3>第5回 イベント処理</h3>
