project.htmlにproject.jsを組み込む

--- a/project.html
+++ b/project.html
@@ -3,50 +3,12 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="project.css">
-    <script src="weather.js" defer></script>
+    <script src="project.js" defer></script>
   </head>
   <body>
     <h1>
         世界の天気を調べよう！
-        <input id="mytext" type="text">
     </h1>
-    <ul>
-        <li>
-            カイロ
-        </li>
-        <li>
-            モスクワ
-        </li>
-        <li>
-            ヨハネスブルク
-        </li>
-        <li id = "cn">
-            北京
-        </li>
-        <li>
-            東京
-        </li>
-        <li>
-            シンガポール
-        </li>
-        <li>
-            シドニー
-        </li>
-        <li>
-            ロンドン
-        </li>
-        <li>
-            パリ
-        </li>
-        <li>
-            リオデジャネイロ
-        </li>
-        <li>
-            ニューヨーク
-        </li>
-        <li>
-            ロサンゼルス
-        </li>
-    </ul>
+        
   </body>
 </html>
