project.htmlにプレースホルダーを設置

--- a/project.html
+++ b/project.html
@@ -9,6 +9,11 @@
     <h1>
         世界の天気を調べよう！
     </h1>
+    <form>
+        <input type="search" placeholder="検索キーワードを入力" value="">
+        <input type="submit" value="検索">
+
+    </form>
         
   </body>
 </html>
