--- a/project.html
+++ b/project.html
@@ -11,7 +11,7 @@
     </h1>
     <form>
         <input type="search" placeholder="検索キーワードを入力" value="">
-        <input type="submit" value="検索">
+        <button id="submit">検索</button>
 
     </form>
         
