--- a/kazuate.html
+++ b/kazuate.html
@@ -11,7 +11,7 @@
     <label for="nyuryoku">1から10の間の整数:</label>
     <input type="text" name="nyuryoku" id="nyuryoku" size="1">
     <button id="answers">回答</button>
-    <p><span id="kaisu">1</span>回目の予想: <span id="answer">4</span></p>
-    <p id="result">将来ここに判定結果を表示します</p>
+    <p><span id="kaisu">1</span>回目の予想: <span id="answer"></span></p>
+    <p id="result"></p>
   </body>
 </html>
