--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
       コンソールではなく、ページに表示するようにkazuate.jsのhantei()メソッドの定義を修正した。予想のメッセージは
       span#kaisu要素とspan#answer要素を指定してから、textContentメソッドを使って、console.log()ではなく、
       HTMLに出力されるように書き換えた。実行した結果、上書きされてしまったため、4回目の結果が表示されたが、hantei()
-      の数を4つから、1つに減らしたところ、一番最初のメッセージが無事表示されたことを確認した。
+      の数を4つから、1つに減らしたところ、一番最初のメッセージが無事表示されたことを確認した。次に課題5-1により、
+      kazuate.htmlの最初のp要素の中のテキストを削除し、ラベル、テキストボックス、回答ボタンを設置、それぞれに
+      属性を指定した。次に、kazuate.jsにおいて、hantei()の呼び出しを削除し、回答ボタンのクリックイベントハンドラとして
+      hanteiを登録、ボタンをクリックすることで、イベントが発生し、テキストボックス内のユーザが入力した内容を参照し、
+      それをparseIntによって、整数に変換したものを変数yosoに代入して、最初に用意された4という値ではなく、入力
+      するごとにそれがそれが予想した数として表示されるように変更することができた。
     </p>
     <a href="kazuate.html">数当てゲームのリンク</a>
     <h2>毎回の実験で作成したページ</h2>
@@ -95,6 +100,19 @@
     </div>
     <div>
       <h3>第5回 イベント処理</h3>
+      <p>今回はjavascriptにおけるイベント処理について学んだ。イベントとはWebページ上で起こった動作や出来事のことで、
+        例を挙げると、クリック、キー入力、ブラウザ画面の変更、webページのロードの完了、フォームの送信、動画の再生、
+        エラーの発生など様々ある。イベント処理の記述については基本的に、要素〇〇を△△したら、□□ を実行するというふうに
+        する。イベントハンドラとは、イベントが発生したときに実行する処理のことで、javaのメソッドのように使う。
+        要素にイベントハンドラを登録するのがaddEventLisener()メソッドである。イベント処理の実行は、1,ブラウザは
+        イベントの発火を認識、2,イベントの種類、要素、イベントハンドラを確認, 3,イベントハンドラを実行する。この順
+        に行われる。また、以下の課題に取り組んだ.
+      </p>
+      <p>演習の成果</p>
+        <ul>
+          <li><a href="practice-event/event-intro.html">演習5-2</li>
+          <li><a href="practice-event/event-list.html">演習5-3</a></li>
+        </ul>
     </div>
   </body>
 </html>
