--- a/project.html
+++ b/project.html
@@ -10,10 +10,13 @@
         世界の天気を調べよう！
     </h1>
     <form>
-        <input type="search" placeholder="検索キーワードを入力" value="">
+        <label for="nyuryoku">ここに検索:</label>
+        <input type="text" id="nyuryoku" name="nyuryoku" placeholder="検索キーワードを入力">
         <button id="submit">検索</button>
-
     </form>
+    <div id="display">
+      <p></p>
+    </div>
         
   </body>
 </html>
