--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>「Webコンテンツ作成」の成果</h1>
     <h2>本テーマの学習目的</h2>
     <h2>プロジェクト課題について</h2>
+    <a href="project.html">プロジェクト課題</a>
     <h2>数当てゲーム</h2>
     <p>最初に「◯回目の予想: 」を出力。回答回数が4回以上の場合、「答えは◯でした。すでにゲームは終わっています」
       と表示。正解だった場合、「正解です。おめでとう！」と表示する。間違いだった場合、それが3回目の回答であれば、
