--- a/project.html
+++ b/project.html
@@ -15,7 +15,9 @@
         <button id="submit">検索</button>
     </form>
     <div id="display">
-      <p></p>
+      <p id="display"></p>
+      <p id="display2"></p>
+      <p id="display3"></p>
     </div>
         
   </body>
