プロジェクト課題更新

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   </head>
     <h1>「Webコンテンツ作成」の成果</h1>
     <h2>本テーマの学習目的</h2>
+    <p>
+      HTMLとCSSとJavaScriptの基本を学習し、これら3つを組み合わせてWebページを作成する方法について学習する。
+      HTMLではWebページの構造の記述の仕方について学ぶ。HTMLでは主に、文字を描くことに使う。CSSはHTMLで記述
+      した内容のレイアウトを自由に設定することができ、これを学習することで、より綺麗なデザインのWebサイトが作れ
+      流ようになる。JavaScriptはWebページに動作を加えることができ、これを学習することで、さらにWebページに機能
+      を追加することができるようになる。
+    </p>
     <h2>プロジェクト課題について</h2>
     <a href="project.html">プロジェクト課題</a>
     <h2>数当てゲーム</h2>
