途中過程を一応保存

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
       を追加することができるようになる。
     </p>
     <h2>プロジェクト課題について</h2>
+    <p>
+      世界の天気をサーバーから取得して、表示するWebサイトを作成しました。プルダウンメニューに表示する都市を指定して、
+      検索ボタンを押すことでその都市の緯度、経度、天気、最低気温、最高気温、湿度、風速、風向き、都市名が既に作成された
+      表に表示されるようになっています。これは、プルダウンメニューのそれぞれのid属性に検索キーとなる都市IDをあらかじめ
+      指定しておき、value関数を使うことで変数idに格納し、それをもとにurlを検索することで実現できました。
+    </p>
     <a href="project.html">プロジェクト課題</a>
     <h2>数当てゲーム</h2>
     <p>最初に「◯回目の予想: 」を出力。回答回数が4回以上の場合、「答えは◯でした。すでにゲームは終わっています」
