--- a/project.html
+++ b/project.html
@@ -10,8 +10,6 @@
     <h1>
         世界の天気を調べよう！
     </h1>
-    <!-- <label for="nyuryoku">ここに検索:</label>
-    <input type="text" id="nyuryoku" name="nyuryoku" placeholder="検索キーワードを入力"> -->
     <select name="country" id="country">
       <option value="">検索する都市を選んでください</option>
       <option value="1816670">北京</option>
@@ -29,39 +27,39 @@
       <table>
         <tr>
           <th>緯度</th>
-          <td id="lat">データ</td>
+          <td id="lat">↓data</td>
         </tr>
         <tr>
           <th>経度</th>
-          <td id="lon">データ</td>
+          <td id="lon"></td>
         </tr>
         <tr>
           <th>天気</th>
-          <td id="weather">データ</td>
+          <td id="weather"></td>
         </tr>
         <tr>
           <th>最低気温</th>
-          <td id="min">データ</td>
+          <td id="min"></td>
         </tr>
         <tr>
           <th>最高気温</th>
-          <td id="max">データ</td>
+          <td id="max"></td>
         </tr>
         <tr>
           <th>湿度</th>
-          <td id="hum">データ</td>
+          <td id="hum"></td>
         </tr>
         <tr>
           <th>風速</th>
-          <td id="sp">データ</td>
+          <td id="sp"></td>
         </tr>
         <tr>
           <th>風向</th>
-          <td id="di">データ</td>
+          <td id="di"></td>
         </tr>
         <tr>
           <th>都市名</th>
-          <td id="name">データ</td>
+          <td id="name"></td>
         </tr>
       </table>
     </div>
