工夫点、苦心点

--- a/index.html
+++ b/index.html
@@ -128,5 +128,29 @@
           <li><a href="practice-event/event-list.html">演習5-3</a></li>
         </ul>
     </div>
+    <div>
+      <h3>工夫点，苦心点，強調点，感想</h3>
+      <p>
+        私が情報メディア実験を受講している中で、Webサイト制作において、一番苦労したことがあります。それは、うまくいかなかった
+        とき、なぜうまくいかないのか、なかなかわからないことです。プログラミングで現在勉強しているjavaでは、コンパイルエラーに
+        よって、何行目のこれが、こういう理由でだめだよと教えてくれるのですが、htmlやcss、javascriptではなんとなく動くけど、
+        思った感じとは違うということが多々ありました。コンソールに入力して、試すという作業があったのですが、コンソール
+        で改行をすると実行されてしまうということが多く、うまくいかなかったので、コードを変えて、いちいちデバッカーで
+        チェックするという方法でやりました。加えて、面倒だったのが、ネットにある情報の多くは古いものが多く、やり方も様々で、
+        うまくいかないものばかりでした。そんな中で一番活躍してくれたのがMDNというサイトです。このサイトは
+        今回の実験の中で、一番思った通りに動いてくれることが多く、役に立ちました。やはり、推奨されている情報源で、情報収集するのは
+        大切だなと実感しました。javascriptを使ったのは今回が初めてだったので、ついていくのがなかなか大変でしたが、次第に慣れていき、
+        最初の頃よりは多少マシになったのではないかと思います。javascriptはjavaとは大きく異なった言語ですが、いくつか記述方法に
+        似ているところがありました。なので、コードは馴染みやすかったと思います。変数の型はletで統一されていて、覚えることが少ない
+        のは楽でしたし、if文なんかもほぼ同じでした。もちろん、型変換がわかりにくいだったり、いちいち書く内容が長いという欠点もありますが... 
+        イベント処理は、プログラミングの結果が実際に目に見えてわかるというのがあり、ただターミナルに文字が表示されて
+        実行されるいつものプログラミング練習とは違った面白さがあったので、それは体験できてよかったと思います。
+        特に、初めてサーバーと通信してデータが返ってきた時は、感動しました。プロジェクト課題も大変でした。最初は、検索キーすらわからず、
+        検索キーはtwiiterで言うところのハッシュタグか何かくらいの認識しかありませんでしたが、回を重ねるにつれ、プロジェクト課題の
+        内容について、何をすればいいのか少しづつわかっていったのでそれはよかったです。私のcssのセンスは知識不足もあり、絶望的ですが、
+        なんとか下手くそながらも完成したので、安心しました。特に、サーバーからデータを取得して反映できたときは、「できた！」という
+        感じがして感動しました。
+      </p>
+    </div>
   </body>
 </html>
